# finite-automata

./: Cargo.toml
.direnv/: nix-profile-pre496992.e603dc5f061.rc
examples/deterministic/: Cargo.toml
examples/deterministic/src/: main.rs
fa/: Cargo.toml
fa/src/: dfa.rs  lib.rs
finite_automata/: Cargo.toml
finite_automata/benches/: dfa.rs
finite_automata/src/: dfa.rs  lib.rs  shared.rs
src/: dfa.rs
