[package]
name = "finite_automata"
authors = ["Andreas Krath <andreas.krath@gmail.com>"]
version = "0.1.0"
edition = "2021"
exclude = ["examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "dfa"
harness = false
